working workflow with autoredirect and magiclink, readme with setup and build instructions, updated ftl templates